Make window controls visible and fix bug opening pictures in pictures viwer

--- a/Frontend/src/System/Window/window.css
+++ b/Frontend/src/System/Window/window.css
@@ -99,22 +99,24 @@
 		width:18px;
 		height:18px;
 		float:right;
-    background-color:withe;
+    background-color:rgba(255, 255, 255, 0.171);
     margin: 0;
     padding: 0;
     border-radius: 50%;
+    margin-left: 2px;
 	}
 	.btnControl:hover{
-		background-color:#ccccff;
+		background-color:#00005f;
 	}
 	.btnXControl{
 		width:18px;
 		height:18px;
 		float:right;
-    background-color:withe;
+    background-color:rgba(255, 255, 255, 0.171);
     border-radius: 50%;
     margin: 0;
     padding: 0;
+    margin-left: 2px;
 	}
 	.btnXControl:hover{
 		background-color:red;
